fix(mySpace/myGroup): :bug: 전역 스타일의 overflow를 각 페이지로 이동시켰습니다

--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,11 @@ body {
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: hidden;
+  /* overflow: hidden; */
   background-color: black;
-  ::-webkit-scrollbar {
+  /* ::-webkit-scrollbar {
     display: none;
-  }
+  } */
 }
 
 code {
